--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
-name=Iotech ADS1115 Library
+name=IoThings ADS1115 Library
 version=1.0.0
-author=Adrien Chapelet for IoTech
+author=Adrien Chapelet for IoThings
 maintainer=Adrien Chapelet <adrien3d@gmail.com>
 sentence=Arduino library for ADS1115 sensors.
 paragraph=Arduino library for ADS1115 precision ADC.
